--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.10.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.0-RC2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
